# ExcellAint

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pyvenv.cfg  setup.py
demo/: demo.ipynb
src/excellaint/: __init__.py  excellaint.py  parser.py
test/notebooks/: demo.ipynb  monkeying_around.ipynb  monkeying_around.py  sketch_out.py
test/test_data/: 2_digit_yr.xlsx  no_time_at_midnight.csv  no_time_at_midnight.xlsx
test/tests/: test_parser.py
