[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "excellaint"
version = "0.1.1"
description="A Python toolbox for dealing with some of the oddities that Excel can introduce into your dates."
authors = [
    {name = "Charles Turner", email = "charlesturner0987@gmail.com"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "polars>=0.20",
    "inquirer>=3.2",
    "pandas>=1.3",
    "fastexcel>=0.10.3",
    "pyarrow>=15.0",
    "xlsx2csv>=0.8",
]
license = {text = "MIT License"}


[project.urls]
homepage = "https://github.com/charles-turner-1/ExcellAint"

[project.scripts]
excellaint = "excellaint:main"


[project.optional-dependencies]
dev = ["pytest>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]